<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="#038BC34A"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="580dp"
        android:layout_height="917dp"
        android:contentDescription="@string/background_image_description"
        android:visibility="visible"
        app:srcCompat="@drawable/background_image_4"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        tools:layout_editor_absoluteX="-51dp"
        tools:layout_editor_absoluteY="-110dp"
        tools:visibility="visible" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="217dp"
        android:background="#ADD8EF"
        android:text="@string/clear"
        android:textColor="#1a1f33"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/compareButton"
        tools:ignore="DuplicateIds,MissingConstraints,UnknownId" />

    <Button
        android:id="@+id/compareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="73dp"
        android:text="@string/compare"
        app:layout_constraintBaseline_toBaselineOf="@+id/clearButton"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        app:flow_verticalBias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abraham_lincoln"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="323dp"
        android:layout_height="85dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="64dp"
        android:text="@string/abraham_lincoln_known_for_leading_the_nation_through_the_civil_war_and_abolishing_slavery_died_at_this_age"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TextContrastCheck,TextSizeCheck" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="43dp"
        android:text="The Renaissance Of Famous Figures"
        android:textAlignment="center"
        android:textColor="#283593"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints" />

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="380dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/age_56"
        android:textColor="#212121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,HardcodedText,LabelFor,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>